test_scores/negative_dimers/features/O60716.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O60716.pkl.xz